HBASE-8895 Misc: replace hbase.client.retries.number w/ define and remove unused imports
git-svn-id: https://svn.apache.org/repos/asf/hbase/trunk@1500988 13f79535-47bb-0310-9956-ffa450edef68